cluster/apps/adsb/tar1090/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tar1090
  namespace: adsb
spec:
  selector:
    matchLabels:
      app: tar1090
  replicas: 1
  template:
    metadata:
      labels:
        app: tar1090
    spec:
      containers:
        - name: tar1090
          image: mikenye/tar1090
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
          livenessProbe:
            exec:
              command:
                - /healthcheck.sh
            initialDelaySeconds: 300
            periodSeconds: 600
            timeoutSeconds: 30
      restartPolicy: Always
