cluster/apps/adsb/tar1090/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tar1090-service
  namespace: adsb
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: tar1090
