cluster/apps/adsb/tar1090/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tar1090-ingress
  namespace: adsb
  annotations:
    haproxy.org/whitelist: "${HAPROXY_WHITELIST}"
    haproxy.org/response-set-header: |
      Strict-Transport-Security "max-age=31536000"
      X-Frame-Options "DENY"
      X-Content-Type-Options "nosniff"
      Referrer-Policy "no-referrer-when-downgrade"
spec:
  rules:
    - host: "planes.${SECRET_PRIVATE_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tar1090-service
                port:
                  number: 80
  tls:
    - secretName: ${SECRET_PRIVATE_DOMAIN_CERT}
      hosts:
        - "planes.${SECRET_PRIVATE_DOMAIN}"
